--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,48 @@
-name: Docker Image CI
+name: docker creation
 
+# Run on PR requests. And on main itself.
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
 
+
+# A workflow run is made up of one or more jobs that can run sequentially or
+# in parallel
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag dss6:$(date +%s)
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can
+      # access it
+      - uses: actions/checkout@v3
+
+      - name: Build and push docker image
+        run: |
+          docker login --username ${{ github.actor }} --password ${{ secrets.CR_PAT }} ghcr.io
+          docker-compose build . --tag ghcr.io/thangqd/dss6:latest
+          docker push ghcr.io/thangqd/dss6:latest
+        if: github.ref == 'refs/heads/main'
+        # Running this job only for main branch.
+
+
+# name: Docker Image CI
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+
+#   build:
+
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Build the Docker image
+#       run: docker build . --file Dockerfile --tag dss6:$(date +%s)   
