--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build and push docker image
         run: |
           docker login --username ${{ github.actor }} --password ${{ secrets.CR_PAT }} ghcr.io
-          docker-compose build . --tag ghcr.io/thangqd/dss6:latest
+          docker-compose build
           docker push ghcr.io/thangqd/dss6:latest
         if: github.ref == 'refs/heads/main'
         # Running this job only for main branch.
